--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
-        "@flaticon/flaticon-uicons": "^3.3.1"
+        "@flaticon/flaticon-uicons": "^3.3.1",
+        "imask": "^7.6.1"
     }
 }
